--- a/appendix.tex
+++ b/appendix.tex
@@ -1,22 +1,22 @@
-\section*{\centering\fonta{16} APPENDIX}
+\chapter*{APPENDIX}
 
-\subsection*{\fonta{12} 1. Bio-data of the student:}
+\section*{Bio-data of the student}
 
 \textbf{Name: } \myname
 \\
-\textbf{Roll no: }
+\textbf{Roll no: } TYPEHERE
 \\
 \textbf{Symbol no: } \sym
 \\
 \textbf{T.U. Registration no: } \reg
 \\
-\textbf{Contact no: }
+\textbf{Contact no: } TYPEHERE
 \\
-\textbf{E-mail: }
+\textbf{E-mail: } @TYPEHERE
 \\
 
 \hspace{1cm} I \textbf{\myname} hereby declare that the proposed research plan
-is original. I will follow all the regulations of \depart, \clz and IOST,
+is original. I will follow all the regulations of \depart, \clz\ and IOST,
 \tu\ regarding.
 
 
