--- a/style.sty
+++ b/style.sty
@@ -4,11 +4,11 @@
 
 \usepackage[a4paper]{geometry} %defining geometry of the page
 \usepackage[utf8]{inputenc}
-\def\DevnagVersion{2.17} 
-\usepackage{devanagari} %for devenagari typing
+\usepackage{mathptmx}
 \setlength{\parindent}{0pt} %to have zero paragrapht indentation
 \usepackage{amsfonts,amsmath,amssymb} %AMS packages for sysmbols, fonts, etc.
 \usepackage{anyfontsize} %able to chose any integer value as font size
+\newcommand{\fonts}[2]{\fontsize{#1}{#2}\selectfont}
 \newgeometry{
 	top=2.5cm, %top margin space
 	bottom=2.5cm, %bottom margin space
@@ -18,16 +18,39 @@
 
 \usepackage{hyperref} %for linking the references of figure, table, etc.
 \hypersetup{hidelinks} %for hiding the references red square
-\usepackage{cite} %for citation
-\usepackage{natbib}
+\usepackage[]{titlesec}
+\usepackage{titletoc}
+\usepackage{tocloft}
+\usepackage{setspace}
+\onehalfspacing
+
+\titleformat{\chapter}[block]{\fonts{14}{18}}{\bfseries\thechapter}{0.1cm}
+{\bfseries\fonts{14}{18}\MakeUppercase}[]
+\titlespacing*{\chapter}{0cm}{-1cm}{0.25cm}[0cm]
+\renewcommand\thechapter{\Alph{chapter}. }
+
+\titleformat{\section}[block]{\fonts{12}{18}}
+{\bfseries\thesection \ }{0.1cm}{\bfseries}[]
+\titlespacing*{\section}{0cm}{0.15cm}{0.25cm}[0cm]
+\renewcommand\thesection{\arabic{section}. }
+
+\titleformat{\subsection}[block]{\fonts{12}{18}}
+{\bfseries\thesubsection \ }{0.1cm}{\bfseries}[]
+\titlespacing*{\subsection}{0.75cm}{0.15cm}{0.25cm}[0cm]
+\titlespacing*{\subsubsection}{0.75cm}{0.15cm}{0.25cm}[0cm]
+\renewcommand\thesubsection{\arabic{section}.\arabic{subsection}. }
+
+\usepackage[backend=biber, style=apa]{biblatex}
+\setlength\bibitemsep{1.5\itemsep}
+\addbibresource{reference.bib}
+
 \usepackage{acronym} %for acronym
-\usepackage{tocloft} %for customizing toc, lot and lof
 \usepackage{xcolor} %for using color
 \usepackage[bf]{caption} %making caption boldface
 
 %changing the fontsize to 10 pt in captions of tables, figures
 \makeatletter
-  \l@addto@macro\captionfont{\fontfamily{ptm}\fontsize{10}{15}\selectfont}
+  \l@addto@macro\captionfont{\fonts{10}{15}}
 \makeatother 
 
 \usepackage{graphicx} %to load images
@@ -39,78 +62,4 @@
 
 \usepackage{enumerate} %for creating lists
 \usepackage{array, multirow, booktabs} %for customizing tables
-
-%changing the font of caption in tables to times roman
-\makeatletter
-\renewenvironment{table}
-  {\renewcommand\familydefault\sfdefault
-   \@float{table}}
-  {\end@float}
-\makeatother
-
-%changing the font of caption in figure to times roman
-\makeatletter
-\renewenvironment{figure}
-  {\renewcommand\familydefault\sfdefault
-   \@float{figure}}
-  {\end@float}
-\makeatother
-\renewcommand{\sfdefault}{ptm}
-
-%to print current month in alphabet
-\newcommand{\lowermonth}{
-  \ifcase\the\month
-  \or\kern-1mm January\kern 0mm
-  \or\kern-1mm February\kern 0mm
-  \or\kern-1mm March\kern 0mm
-  \or\kern-1mm April\kern 0mm
-  \or\kern-1mm May\kern 0mm
-  \or\kern-1mm June\kern 0mm
-  \or\kern-1mm July\kern 0mm
-  \or\kern-1mm August\kern 0mm
-  \or\kern-1mm September\kern 0mm
-  \or\kern-1mm October\kern 0mm
-  \or\kern-1mm November\kern 0mm
-  \or\kern-1mm December\kern 0mm
-  \fi
- }
-
-%to print current month in uppercase
-\newcommand{\uppermonth}{\MakeUppercase\lowermonth}
-
-%changing the command \textsubscript{} to \tsb
-\newcommand{\tsb}[1]{\textsubscript{#1}}
-%changing the command \textsuperscript{} to \tsp
-\newcommand{\tsp}[1]{\textsuperscript{#1}}
-
-%below are also list of macros created to reduce the size of commands
-
-%changing font size
-\newcommand{\fonta}[1]{\fontfamily{ptm}\fontsize{#1}{18}\selectfont}
-%adding entry to the table of content
-\newcommand{\toca}[3]{\addcontentsline{toc}{#1}{#2 #3}}
-%adding entry to the table of content as well creating the heading
-\newcommand{\tocb}[3]{\textbf{\fonta{#2} #3} \toca{#1}{\fonta{#2}}{#3}}
-%changing font size with a vertical space
-\newcommand{\fontb}{\vspace{-2.5cm} \centering\fonta{16}}
-%changing font size with a vertical space filled in right side
-\newcommand{\fontc}[1]{\vspace{1cm}\fonta{14}{#1} \hfill\vspace{-1.4cm}}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
