--- a/packages.tex
+++ b/packages.tex
@@ -55,7 +55,7 @@
 
 \usepackage{graphicx} %to load images
 \usepackage{float}
-\graphicspath{{images/}} %all the graphics are sourced from images/ folder
+\graphicspath{{figures/}} %all the graphics are sourced from images/ folder
 %if extra for graphics folder required uncomment below line and replace
 %...nam.../ with the path to that folder
 %\graphicspath{{images/},{...nam.../}}
