customizeCode folder added

--- a/customizeCode/packages.tex
+++ b/customizeCode/packages.tex
@@ -42,7 +42,7 @@
 
 \usepackage[backend=biber, style=apa]{biblatex}
 \setlength\bibitemsep{1.5\itemsep}
-\addbibresource{reference.bib}
+\addbibresource{chapters/reference.bib}
 
 \usepackage{acronym} %for acronym
 \usepackage{xcolor} %for using color
