--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{report}
-\input{packages} %loading the preambles written in style.sty file
-\input{commands}
-\input{names}
+\input{customizeCode/packages} %loading the preambles written in packages.tex file
+\input{customizeCode/commands}
+\input{customizeCode/names}
 
 \begin{document}
 
